# golden-key-property

./: .gitignore  .vercelignore  LICENSE  README.md  SECURITY.md  docker-compose.yml  take-screenshots.mjs  vercel.json
.github/workflows/: ci.yml
.vercel/: project.json
backend/: .env.example  .gitignore  Dockerfile  README.md  admin.py  database.py  generate_villa.py  import_catalog.py  integrations.py  main.py  pyproject.toml  requirements.txt  seed_demo.py  test_main.py
backend/migrations/: env.py
backend/migrations/versions/: 4489344615a9_initial_production_schema.py  8a31d86c2f14_admin_sessions.py
backend/static/: 404.html  500.html  admin.css  app.js  docs.js  i18n.js  index.html  manifest.webmanifest  not-found.html  pages.css  pages.js  robots.txt  sitemap.xml  styles.css
backend/static/css/: docs.css
backend/static/docs/: index.html
backend/static/models/: README.md  alpine-chalet.glb  burj-penthouse.glb  coastal-villa.glb  harbour-penthouse.glb  marina-tower.glb  palm-villa.glb  villa.glb
backend/templates/: admin_base.html  admin_dashboard.html  admin_leads.html  admin_listing.html  admin_login.html  area.html  areas.html  base.html  catalogue.html  content.html  property.html
src/app/: globals.css  layout.tsx  page.tsx
src/app/properties/: page.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/components/property/: CatalogControls.tsx  CatalogFilters.tsx  PropertyCard.tsx
src/components/ui/: Pagination.tsx
tasks/: plan.md  todo.md
